Optimized game loop CPU operations